Certified Kubernetes Administrator: Troubleshooting Workloads, Services, and Resource Usage/m2/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-v1
  template:
    metadata:
      labels:
        app: demo-v1
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-v1
  ports:
    - port: 80
      targetPort: 80
