Certified Kubernetes Administrator: Troubleshooting Workloads, Services, and Resource Usage/m2/pod-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
  labels:
    app: app5
spec:
  containers:
  - name: app5-container
    image: nginx
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service5
spec:
  selector:
    app: app5
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
