Certified Kubernetes Administrator: Troubleshooting Workloads, Services, and Resource Usage/m2/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: access-v1
  template:
    metadata:
      labels:
        app: access-v1
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: access-service
spec:
  selector:
    app: access-v1
  ports:
    - port: 8080
      targetPort: 3000
