Certified Kubernetes Administrator: Troubleshooting Workloads, Services, and Resource Usage/m2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: backend
spec:
  rules:
    -host: "resources.example.com"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
