Certified Kubernetes Administrator: Troubleshooting Workloads, Services, and Resource Usage/m2/deny-access-policy-change.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: access-v1
  policyTypes:
    - Ingress
  ingress: 
    - from:
      - podSelector: {}
